--- a/index.html
+++ b/index.html
@@ -1,111 +1,114 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <ul>
-            <li>
-                <a href="index.html">Webstudio</a>
-            </li>
-            <li>
-                <a href="#">Студія</a>
-            </li>
-            <li>
-                <a href="portfolio.html">Портфоліо</a>
-            </li>
-            <li>
-                <a href="#">Контакти</a>
-            </li>
-            <li>
-                <a href="#">info@devstudio.com</a>
-            </li>
-            <li>
-                <a href="#">+38 096 111 11 11</a>
-            </li>
-            </ul>
+      <ul>
+        <li>
+          <a href="index.html">Webstudio</a>
+        </li>
+        <li>
+          <a href="#">Студія</a>
+        </li>
+        <li>
+          <a href="portfolio.html">Портфоліо</a>
+        </li>
+        <li>
+          <a href="#">Контакти</a>
+        </li>
+        <li>
+          <a href="#">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="#">+38 096 111 11 11</a>
+        </li>
+      </ul>
     </header>
     <main>
-        <section>
-          <h1>Ефективні рішення для вашого бізнесу</h1>
-          <button type="button">Замовити послугу</button>
-        </section>
-        <section>
-          <ul>
-            <li>
-              <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-              <p>
-                Ідейні міркування, і навіть початок повсякденної роботи з
-                формування позиції.
-              </p>
-            </li>
-            <li>
-              <h2>ПУНКТУАЛЬНІСТЬ</h2>
-              <p>
-                Завдання організації, особливо рамки і місце навчання кадрів тягне
-                у себе.
-              </p>
-            </li>
-            <li>
-              <h2>ПЛАНУВАННЯ</h2>
-              <p>
-                Так само консультація з широким активом значною мірою зумовлює.
-              </p>
-            </li>
-            <li>
-              <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-              <p>
-                Значимість цих проблем настільки очевидна, що реалізація планових
-                завдань.
-              </p>
-            </li>
-          </ul>
-        </section>
-        <section>
-          <h2>Чим ми займаємося</h2>
-          <ul>
-            <li><img src="./img/comp.jpg" alt="img"></li>
-            <li><img src="./img/tel.jpg" alt="img"></li>
-            <li><img src="./img/tablet.jpg" alt="img"></li>
-          </ul>
-        </section>
-        <section>
-          <ul>
-            <li>
-              <img src="./img/igor.jpg" alt="img">
-              <h3>Ігор Дем'яненко</h3>
-              <p>Product Designer</p>
-            </li>
-            <li>
-              <img src="./img/olya.jpg" alt="img">
-              <h3>Ольга Рєпіна</h3>
-              <p>Frontend Developer</p>
-            </li>
-            <li>
-              <img src="./img/mikola.jpg" alt="img">
-              <h3>Микола Тарасов</h3>
-              <p>Marketing</p>
-            </li>
-            <li>
-              <img src="./img/mihailo.jpg" alt="img">
-              <h3>Михайло Єрмаков</h3>
-              <p>UI Designer</p>
-            </li>
-          </ul>
-        </section>
-      </main>
-      <footer>
-        <a href="./index.html">WebStudio</a>
-        <address>
-        <a href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu">м. Київ, пр-т Лесі Українки, 26</a>п
-          <ul>
-              <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-              <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
-            </ul>
-          </address>
-      </footer>
-</body>
+      <section>
+        <h1>Ефективні рішення для вашого бізнесу</h1>
+        <button type="button">Замовити послугу</button>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
+            <p>
+              Ідейні міркування, і навіть початок повсякденної роботи з
+              формування позиції.
+            </p>
+          </li>
+          <li>
+            <h2>ПУНКТУАЛЬНІСТЬ</h2>
+            <p>
+              Завдання організації, особливо рамки і місце навчання кадрів тягне
+              у себе.
+            </p>
+          </li>
+          <li>
+            <h2>ПЛАНУВАННЯ</h2>
+            <p>
+              Так само консультація з широким активом значною мірою зумовлює.
+            </p>
+          </li>
+          <li>
+            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <p>
+              Значимість цих проблем настільки очевидна, що реалізація планових
+              завдань.
+            </p>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Чим ми займаємося</h2>
+        <ul>
+          <li><img src="./img/comp.jpg" alt="img" /></li>
+          <li><img src="./img/tel.jpg" alt="img" /></li>
+          <li><img src="./img/tablet.jpg" alt="img" /></li>
+        </ul>
+      </section>
+      <section>
+        <ul>
+          <li>
+            <img src="./img/igor.jpg" alt="img" />
+            <h3>Ігор Дем'яненко</h3>
+            <p>Product Designer</p>
+          </li>
+          <li>
+            <img src="./img/olya.jpg" alt="img" />
+            <h3>Ольга Рєпіна</h3>
+            <p>Frontend Developer</p>
+          </li>
+          <li>
+            <img src="./img/mikola.jpg" alt="img" />
+            <h3>Микола Тарасов</h3>
+            <p>Marketing</p>
+          </li>
+          <li>
+            <img src="./img/mihailo.jpg" alt="img" />
+            <h3>Михайло Єрмаков</h3>
+            <p>UI Designer</p>
+          </li>
+        </ul>
+      </section>
+    </main>
+    <footer>
+      <a href="./index.html">WebStudio</a>
+      <address>
+        <a
+          href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
+          >м. Київ, пр-т Лесі Українки, 26</a
+        >п
+        <ul>
+          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
+    </footer>
+  </body>
 </html>
