--- a/portfolio.html
+++ b/portfolio.html
@@ -1,11 +1,101 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+  </head>
+  <body>
+    <header>
+      <ul>
+        <li>
+          <a href="index.html">Webstudio</a>
+        </li>
+        <li>
+          <a href="#">Студія</a>
+        </li>
+        <li>
+          <a href="portfolio.html">Портфоліо</a>
+        </li>
+        <li>
+          <a href="#">Контакти</a>
+        </li>
+        <li>
+          <a href="#">info@devstudio.com</a>
+        </li>
+        <li>
+          <a href="#">+38 096 111 11 11</a>
+        </li>
+      </ul>
+    </header>
+    <main>
+      <section>
+        <button type="button">Усі</button>
+        <button type="button">Веб-сайти</button>
+        <button type="button">Додатки</button>
+        <button type="button">Дизайн</button>
+        <button type="button">Маркетинг</button>
+      </section>
+      <section>
+      <li>
+        <a href="./img/технокряк.png">Технокряк</a>
+        <h2>Технокряк</h2>
+        <p>Веб-сайт</p>
+      </li>
+      <li>
+        <a href="./img/постер new orlean vs golden star.png">Постер New Orlean vs Golden Star</a>
+        <h2>Постер New Orlean vs Golden Star</h2>
+        <p>Дизайн</p>
+      </li>
+      <li>
+        <a href="./img/ресторан seafood.png">Ресторан Seafood</a>
+        <h2>Ресторан Seafood</h2>
+        <p>Додаток</p>
+      </li>
+      <li>
+        <a href="./img/проєкт prime.png">Проєкт Prime</a>
+        <h2>Проєкт Prime</h2>
+        <p>Маркетинг</p>
+      </li>
+      <li>
+        <a href="./img/проєкт boxes.png">Проєкт Boxes</a>
+        <h2>Проєкт Boxes</h2>
+        <p>Додаток</p>
+      </li>
+      <li>
+        <a href="./img/inspiration has no borders.png">Inspiration has no Borders</a>
+        <h2>Inspiration has no Borders</h2>
+        <p>Веб-сайт</p>
+      </li>
+      <li>
+        <a href="./img/видання limited edition.png">Видання Limited Edition</a>
+        <h2>Видання Limited Edition</h2>
+        <p>Дизайн</p>
+      </li>
+      <li>
+        <a href="./img/проєкт lab.png">Проєкт LAB</a>
+        <h2>Проєкт LAB</h2>
+        <p>Маркетинг</p>
+      </li>
+      <li>
+        <a href="./img/growing business.png">Growing Business</a>
+        <h2>Growing Business</h2>
+        <p>Додаток</p>
+      </li>
+      </section>
+    </main>
+    <footer>
+        <a href="./index.html">WebStudio</a>
+        <address>
+          <a
+            href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
+            >м. Київ, пр-т Лесі Українки, 26</a
+          >п
+          <ul>
+            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          </ul>
+        </address>
+      </footer>
+  </body>
 </html>
