--- a/portfolio.html
+++ b/portfolio.html
@@ -38,47 +38,47 @@
       </section>
       <section>
       <li>
-        <a href="./img/технокряк.png">Технокряк</a>
+        <img src="./img/технокряк.png" alt="Технокряк">
         <h2>Технокряк</h2>
         <p>Веб-сайт</p>
       </li>
       <li>
-        <a href="./img/постер new orlean vs golden star.png">Постер New Orlean vs Golden Star</a>
+        <img src="./img/постер new orlean vs golden star.png" alt="Постер New Orlean vs Golden Star">
         <h2>Постер New Orlean vs Golden Star</h2>
         <p>Дизайн</p>
       </li>
       <li>
-        <a href="./img/ресторан seafood.png">Ресторан Seafood</a>
+        <img src="./img/ресторан seafood.png" alt="Ресторан Seafood">
         <h2>Ресторан Seafood</h2>
         <p>Додаток</p>
       </li>
       <li>
-        <a href="./img/проєкт prime.png">Проєкт Prime</a>
+        <img src="./img/проєкт prime.png" alt="Проєкт Prime">
         <h2>Проєкт Prime</h2>
         <p>Маркетинг</p>
       </li>
       <li>
-        <a href="./img/проєкт boxes.png">Проєкт Boxes</a>
+        <img src="./img/проєкт boxes.png" alt="Проєкт Boxes">
         <h2>Проєкт Boxes</h2>
         <p>Додаток</p>
       </li>
       <li>
-        <a href="./img/inspiration has no borders.png">Inspiration has no Borders</a>
+        <img src="./img/inspiration has no borders.png" alt="Inspiration has no Borders">
         <h2>Inspiration has no Borders</h2>
         <p>Веб-сайт</p>
       </li>
       <li>
-        <a href="./img/видання limited edition.png">Видання Limited Edition</a>
+        <img src="./img/видання limited edition.png" alt="Видання Limited Edition">
         <h2>Видання Limited Edition</h2>
         <p>Дизайн</p>
       </li>
       <li>
-        <a href="./img/проєкт lab.png">Проєкт LAB</a>
+        <img src="./img/проєкт lab.png" alt="Проєкт LAB">
         <h2>Проєкт LAB</h2>
         <p>Маркетинг</p>
       </li>
       <li>
-        <a href="./img/growing business.png">Growing Business</a>
+        <img src="./img/growing business.png" alt="Growing Business">
         <h2>Growing Business</h2>
         <p>Додаток</p>
       </li>
