--- a/portfolio.html
+++ b/portfolio.html
@@ -10,7 +10,7 @@
       <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
-          <li><a href="#">Студія</a></li>
+          <li><a href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
