--- a/portfolio.html
+++ b/portfolio.html
@@ -22,55 +22,57 @@
     </header>
     <main>
       <section>
-        <button type="button">Усі</button>
-        <button type="button">Веб-сайти</button>
-        <button type="button">Додатки</button>
-        <button type="button">Дизайн</button>
-        <button type="button">Маркетинг</button>
+        <ul>
+        <li><button type="button">Усі</button></li>
+         <li><button type="button">Веб-сайти</button></li>
+          <li><button type="button">Додатки</button></li>
+          <li><button type="button">Дизайн</button></li>
+          <li><button type="button">Маркетинг</button></li>
+      </ul>
       </section>
       <section>
       <li>
-        <img src="./img/технокряк.png" alt="Технокряк">
+        <img src="./img/technocrack.jpg" alt="Технокряк">
         <h2>Технокряк</h2>
         <p>Веб-сайт</p>
       </li>
       <li>
-        <img src="./img/постер new orlean vs golden star.png" alt="Постер New Orlean vs Golden Star">
+        <img src="./img/new orlean vs golden star.jpg" alt="Постер New Orlean vs Golden Star">
         <h2>Постер New Orlean vs Golden Star</h2>
         <p>Дизайн</p>
       </li>
       <li>
-        <img src="./img/ресторан seafood.png" alt="Ресторан Seafood">
+        <img src="./img/seafood.jpg" alt="Ресторан Seafood">
         <h2>Ресторан Seafood</h2>
         <p>Додаток</p>
       </li>
       <li>
-        <img src="./img/проєкт prime.png" alt="Проєкт Prime">
+        <img src="./img/prime.jpg" alt="Проєкт Prime">
         <h2>Проєкт Prime</h2>
         <p>Маркетинг</p>
       </li>
       <li>
-        <img src="./img/проєкт boxes.png" alt="Проєкт Boxes">
+        <img src="./img/boxes.jpg" alt="Проєкт Boxes">
         <h2>Проєкт Boxes</h2>
         <p>Додаток</p>
       </li>
       <li>
-        <img src="./img/inspiration has no borders.png" alt="Inspiration has no Borders">
+        <img src="./img/inspiration has no borders.jpg" alt="Inspiration has no Borders">
         <h2>Inspiration has no Borders</h2>
         <p>Веб-сайт</p>
       </li>
       <li>
-        <img src="./img/видання limited edition.png" alt="Видання Limited Edition">
+        <img src="./img/limited edition.jpg" alt="Видання Limited Edition">
         <h2>Видання Limited Edition</h2>
         <p>Дизайн</p>
       </li>
       <li>
-        <img src="./img/проєкт lab.png" alt="Проєкт LAB">
+        <img src="./img/lab.jpg" alt="Проєкт LAB">
         <h2>Проєкт LAB</h2>
         <p>Маркетинг</p>
       </li>
       <li>
-        <img src="./img/growing business.png" alt="Growing Business">
+        <img src="./img/growing business.jpg" alt="Growing Business">
         <h2>Growing Business</h2>
         <p>Додаток</p>
       </li>
