--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
   </head>
   <body>
     <header>
-      <a href="./index.html">WebStudio</a>
+      <a class="king1" href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="./index.html">Студія</a></li>
@@ -16,14 +17,14 @@
         </ul>
       </nav>
       <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="king4" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="king5" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
+      <section class="king3">
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button type="button">Замовити послугу</button>
+        <button class="king2" type="button">Замовити послугу</button>
       </section>
       <section>
         <ul>
