--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <a class="king1" href="./index.html">WebStudio</a>
+      <a href="./index.html">WebStudio</a>
       <nav>
         <ul>
           <li><a href="./index.html">Студія</a></li>
@@ -17,14 +17,14 @@
         </ul>
       </nav>
       <ul>
-        <li><a class="king4" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a class="king5" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section class="king3">
+      <section>
         <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button class="king2" type="button">Замовити послугу</button>
+        <button  type="button">Замовити послугу</button>
       </section>
       <section>
         <ul>
