--- a/index.html
+++ b/index.html
@@ -5,19 +5,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="./style.css">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&family=Raleway:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
   </head>
   <body>
-    <header>
-      <a class="king" href="./index.html">WebStudio</a>
+    <header class="title">
+      <a class="a" href="./index.html">Web <span class="span-item">Studio</span></a>
       <nav>
-        <ul>
+        <ul class="ul-title">
           <li><a href="./index.html">Студія</a></li>
           <li><a href="./portfolio.html">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul>
+      <ul class="ul">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
@@ -27,72 +29,72 @@
         <h1>Ефективні рішення для вашого бізнесу</h1>
         <button  type="button">Замовити послугу</button>
       </section>
-      <section>
-        <ul>
+      <section class="section">
+        <ul class="ul-1">
           <li>
-            <h2>УВАГА ДО ДЕТАЛЕЙ</h2>
-            <p>
+            <h2 class="h2">УВАГА ДО ДЕТАЛЕЙ</h2>
+            <p class="p">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h2>ПУНКТУАЛЬНІСТЬ</h2>
-            <p>
+            <h2 class="h2">ПУНКТУАЛЬНІСТЬ</h2>
+            <p class="p">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h2>ПЛАНУВАННЯ</h2>
-            <p>
+            <h2 class="h2">ПЛАНУВАННЯ</h2>
+            <p class="p">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h2>СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-            <p>
+            <h2 class="h2">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <p class="p">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чим ми займаємося</h2>
+      <section class="section-1">
+        <h2 class="section-item">Чим ми займаємося</h2>
         <ul>
           <li><img src="./img/comp.jpg" alt="img" /></li>
           <li><img src="./img/tel.jpg" alt="img" /></li>
           <li><img src="./img/tablet.jpg" alt="img" /></li>
         </ul>
       </section>
-      <section>
+      <section class="section-2">
         <ul>
           <li>
             <img src="./img/igor.jpg" alt="img" />
-            <h3>Ігор Дем'яненко</h3>
-            <p>Product Designer</p>
+            <h3 class="h3">Ігор Дем'яненко</h3>
+            <p class="p">Product Designer</p>
           </li>
           <li>
             <img src="./img/olya.jpg" alt="img" />
-            <h3>Ольга Рєпіна</h3>
-            <p>Frontend Developer</p>
+            <h3 class="h3">Ольга Рєпіна</h3>
+            <p class="p">Frontend Developer</p>
           </li>
           <li>
             <img src="./img/mikola.jpg" alt="img" />
-            <h3>Микола Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="h3">Микола Тарасов</h3>
+            <p class="p">Marketing</p>
           </li>
           <li>
             <img src="./img/mihailo.jpg" alt="img" />
-            <h3>Михайло Єрмаков</h3>
-            <p>UI Designer</p>
+            <h3 class="h3">Михайло Єрмаков</h3>
+            <p class="h3">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a class="family" href="./index.html">WebStudio</a>
+    <footer class="footer">
+      <a class="a" href="./index.html">Web <span class="span-item">Studio</span></a>
       <address>
         <a
           href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
