--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
 <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
-    <header class="title">
-      <a class="a" href="./index.html">Web <span class="span-item">Studio</span></a>
+    <header class="title1">
+      <a class="link" href="./index.html">Web <span class="span-item">Studio</span></a>
       <nav>
         <ul class="ul-title">
           <li><a href="./index.html">Студія</a></li>
@@ -21,41 +21,41 @@
           <li><a href="#">Контакти</a></li>
         </ul>
       </nav>
-      <ul class="ul">
+      <ul class="title2">
         <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
         <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
-      <section>
-        <h1>Ефективні рішення для вашого бізнесу</h1>
-        <button  type="button">Замовити послугу</button>
+      <section class="title-section">
+        <h1 class="section-title">Ефективні рішення для вашого бізнесу</h1>
+        <button  type="button" class="section-button">Замовити послугу</button>
       </section>
-      <section class="section">
-        <ul class="ul-1">
+      <section title>
+        <ul class=list-title>
           <li>
-            <h2 class="h2">УВАГА ДО ДЕТАЛЕЙ</h2>
-            <p class="p">
+            <h2 class="list-item">УВАГА ДО ДЕТАЛЕЙ</h2>
+            <p class="list-text">
               Ідейні міркування, і навіть початок повсякденної роботи з
               формування позиції.
             </p>
           </li>
           <li>
-            <h2 class="h2">ПУНКТУАЛЬНІСТЬ</h2>
-            <p class="p">
+            <h2 class="list-item">ПУНКТУАЛЬНІСТЬ</h2>
+            <p class="list-text">
               Завдання організації, особливо рамки і місце навчання кадрів тягне
               у себе.
             </p>
           </li>
           <li>
-            <h2 class="h2">ПЛАНУВАННЯ</h2>
-            <p class="p">
+            <h2 class="list-item">ПЛАНУВАННЯ</h2>
+            <p class="list-text">
               Так само консультація з широким активом значною мірою зумовлює.
             </p>
           </li>
           <li>
-            <h2 class="h2">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
-            <p class="p">
+            <h2 class="list-item">СУЧАСНІ ТЕХНОЛОГІЇ</h2>
+            <p class="list-text">
               Значимість цих проблем настільки очевидна, що реалізація планових
               завдань.
             </p>
@@ -74,35 +74,35 @@
         <ul>
           <li>
             <img src="./img/igor.jpg" alt="img" />
-            <h3 class="h3">Ігор Дем'яненко</h3>
-            <p class="p">Product Designer</p>
+            <h3 class="section-title">Ігор Дем'яненко</h3>
+            <p class="section-text">Product Designer</p>
           </li>
           <li>
             <img src="./img/olya.jpg" alt="img" />
-            <h3 class="h3">Ольга Рєпіна</h3>
-            <p class="p">Frontend Developer</p>
+            <h3 class="section-title">Ольга Рєпіна</h3>
+            <p class="section-text">Frontend Developer</p>
           </li>
           <li>
             <img src="./img/mikola.jpg" alt="img" />
-            <h3 class="h3">Микола Тарасов</h3>
-            <p class="p">Marketing</p>
+            <h3 class="section-title">Микола Тарасов</h3>
+            <p class="section-text">Marketing</p>
           </li>
           <li>
             <img src="./img/mihailo.jpg" alt="img" />
-            <h3 class="h3">Михайло Єрмаков</h3>
-            <p class="h3">UI Designer</p>
+            <h3 class="section-title">Михайло Єрмаков</h3>
+            <p class="section-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
     <footer class="footer">
-      <a class="a" href="./index.html">Web <span class="span-item">Studio</span></a>
+      <a class="footer-link" href="./index.html">Web <span class="span-item">Studio</span></a>
       <address>
         <a
           href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
           >м. Київ, пр-т Лесі Українки, 26</a
         >п
-        <ul>
+        <ul class="ul-title1">
           <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
           <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
