--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="./assets/style.css">   
 </head>
   <body>
-    <header>
-      <a class="a"href="../index.html">Web <span class="span-item">Studio</span></a>
+    <header class="header">
+      <a class="link"href="../index.html">Web <span class="span-item">Studio</span></a>
       <nav>
         <ul class="ul-title">
           <li><a href="../index.html">Студія</a></li>
@@ -27,7 +27,7 @@
       </ul>
     </header>
     <main>
-      <section>
+      <section class="section-title1">
         <ul>
         <li><button type="button">Усі</button></li>
          <li><button type="button">Веб-сайти</button></li>
@@ -36,56 +36,56 @@
           <li><button type="button">Маркетинг</button></li>
       </ul>
       </section>
-      <section>
+      <section class="list-title">
       <li>
         <img src="../img/technocrack.jpg" alt="Технокряк">
-        <h2 class="h2">Технокряк</h2>
-        <p>Веб-сайт</p>
+        <h2 class="list-item">Технокряк</h2>
+        <p class="list-text">Веб-сайт</p>
       </li>
       <li>
         <img src="../img/new orlean vs golden star.jpg" alt="Постер New Orlean vs Golden Star">
-        <h2  class="h2">Постер New Orlean vs Golden Star</h2>
-        <p class="p">Дизайн</p>
+        <h2  class="list-item">Постер New Orlean vs Golden Star</h2>
+        <p class="list-text">Дизайн</p>
       </li>
       <li>
         <img src="../img/seafood.jpg" alt="Ресторан Seafood">
-        <h2 class="h2">Ресторан Seafood</h2>
-        <p class="p">Додаток</p>
+        <h2 class="list-item">Ресторан Seafood</h2>
+        <p class="list-text">Додаток</p>
       </li>
       <li>
         <img src="../img/prime.jpg" alt="Проєкт Prime">
-        <h2 class="h2">Проєкт Prime</h2>
-        <p class="p">Маркетинг</p>
+        <h2 class="list-item">Проєкт Prime</h2>
+        <p class="list-text">Маркетинг</p>
       </li>
       <li>
         <img src="../img/boxes.jpg" alt="Проєкт Boxes">
-        <h2 class="h2">Проєкт Boxes</h2>
-        <p class="p">Додаток</p>
+        <h2 class="list-item">Проєкт Boxes</h2>
+        <p class="list-text">Додаток</p>
       </li>
       <li>
         <img src="../img/inspiration has no borders.jpg" alt="Inspiration has no Borders">
-        <h2 class="h2">Inspiration has no Borders</h2>
-        <p class="p">Веб-сайт</p>
+        <h2 class="list-item">Inspiration has no Borders</h2>
+        <p class="list-text">Веб-сайт</p>
       </li>
       <li>
         <img src="../img/limited edition.jpg" alt="Видання Limited Edition">
-        <h2 class="h2">Видання Limited Edition</h2>
-        <p class="p">Дизайн</p>
+        <h2 class="list-item">Видання Limited Edition</h2>
+        <p class="list-text">Дизайн</p>
       </li>
       <li>
         <img src="../img/lab.jpg" alt="Проєкт LAB">
-        <h2 class="h2">Проєкт LAB</h2>
-        <p class="p">Маркетинг</p>
+        <h2 class="list-item">Проєкт LAB</h2>
+        <p class="list-text">Маркетинг</p>
       </li>
       <li>
         <img src="../img/growing business.jpg" alt="Growing Business">
-        <h2 class="h2">Growing Business</h2>
-        <p class="p">Додаток</p>
+        <h2 class="list-item">Growing Business</h2>
+        <p class="list-text">Додаток</p>
       </li>
       </section>
     </main>
-    <footer>
-        <a class="a" href="../index.html">Web <span class="span-item">Studio</span></a>
+    <footer class="footer">
+        <a class="footer-link" href="../index.html">Web <span class="span-item">Studio</span></a>
         <address>
           <a
             href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
