--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -8,12 +8,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/3.0.1/modern-normalize.min.css" integrity="sha512-q6WgHqiHlKyOqslT/lgBgodhd03Wp4BEqKeW6nNtlOY4quzyG3VoQKFrieaCeSnuVseNKRGpGeDU3qPmabCANg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./assets/reset.css">
-    <link rel="stylesheet" href="./assets/style.css">   
+    <link rel="stylesheet" href="../assets/reset.css">
+    <link rel="stylesheet" href="../assets/style.css">   
 </head>
   <body>
     <header class="header">
-      <a class="link"href="../index.html">Web <span class="span-item">Studio</span></a>
+      <a class="link" href="../index.html">Web <span class="span-item">Studio</span></a>
       <nav>
         <ul class="ul-title">
           <li><a href="../index.html">Студія</a></li>
@@ -85,7 +85,7 @@
       </section>
     </main>
     <footer class="footer">
-        <a class="footer-link" href="../index.html">Web <span class="span-item">Studio</span></a>
+      <a class="footer-link" href="../index.html">Web <span class="span-item">Studio</span></a>
         <address>
           <a
             href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
