--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         </ul>
       </nav>
       <ul class="headline">
-        <li class="headline-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li class="headline-list"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li><a class="headline-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+        <li><a class="headline-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
       </ul>
     </header>
     <main>
@@ -104,8 +104,8 @@
           >м. Київ, пр-т Лесі Українки, 26</a
         >п
         <ul class="heading">
-          <li class="heading-list"><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li class="heading-list"><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li ><a class="heading-list" href="mailto:info@devstudio.com">info@devstudio.com</a></li>
+          <li ><a class="heading-list" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
