--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -40,10 +40,14 @@
       </nav>
       <ul class="headline">
         <li class="headline-list">
-          <a class="headline-list" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="headline-list" href="mailto:info@devstudio.com"
+            >info@devstudio.com</a
+          >
         </li>
         <li class="headline-list">
-          <a class="headline-list" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="headline-list" href="tel:+380961111111"
+            >+38 096 111 11 11</a
+          >
         </li>
       </ul>
     </header>
@@ -90,21 +94,20 @@
           <p class="subtitle-text">Додаток</p>
         </li>
         <li>
-          <img class="subtitle-img" src="../img/prime.jpg" alt="Проєкт Prime" />
+          <img class="subtitle-img" src="../img/prime.jpg" alt="Проєкт Prime"/>
           <h2 class="subtitle-title">Проєкт Prime</h2>
           <p class="subtitle-text">Маркетинг</p>
         </li>
         <li>
-          <img class="subtitle-img" src="../img/boxes.jpg" alt="Проєкт Boxes" />
+          <img class="subtitle-img" src="../img/boxes.jpg" alt="Проєкт Boxes"/>
           <h2 class="subtitle-title">Проєкт Boxes</h2>
           <p class="subtitle-text">Додаток</p>
         </li>
         <li>
-          <img
+          <img>
             class="subtitle-img"
             src="../img/inspiration has no borders.jpg"
             alt="Inspiration has no Borders"
-          />
           <h2 class="subtitle-title">Inspiration has no Borders</h2>
           <p class="subtitle-text">Веб-сайт</p>
         </li>
@@ -135,11 +138,10 @@
     </main>
     <footer class="footer">
       <a class="footer-link" href="../index.html"
-        >Web<span class="footer-item">Studio</span></a
-      >
+        >Web<span class="footer-item">Studio</span></a>
       <address class="caption">
         <a
-          class="caption"
+          class="caption-link"
           href="https://www.google.com/maps/place/ул.+Леси+Украинки,+26,+Киев,+02000/@50.5190801,30.4336481,17z/data=!3m1!4b1!4m10!1m2!2m1!1z0LwuINCa0LjRl9CyLCDQv9GALdGCINCb0LXRgdGWINCj0LrRgNCw0ZfQvdC60LgsIDI2!3m6!1s0x40d4d29b9e369069:0xff64663a5fd75cd5!8m2!3d50.5190802!4d30.4385136!15sCjPQvC4g0JrQuNGX0LIsINC_0YAt0YIg0JvQtdGB0ZYg0KPQutGA0LDRl9C90LrQuCwgMjaSARBnZW9jb2RlZF9hZGRyZXNz4AEA!16s%2Fg%2F11hz60_tnl?entry=ttu"
           >м. Київ, пр-т Лесі Українки, 26</a
         >
