--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -14,7 +14,7 @@
       rel="stylesheet"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    <link rel="stylesheet" href="../assets/main.min.css" />
+    <link rel="stylesheet" href="../style/main.min.css" />
   </head>
   <body>
     <!-- шапка -->
